syntax = "proto3";

package org.e2eelab.skissm.proto;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeMessageType";
option java_multiple_files = true;

enum e2ee_message_type {
  PRE_KEY = 0;
  MESSAGE = 1;
  GROUP_MESSAGE = 2;
}